go-away/tests/snapshots/swift_output__lifetimes_and_strs.snap
---
source: go-away/tests/swift_output.rs
expression: "go_away::registry_to_output::<go_away::SwiftType>(&registry)"
---
public struct TypeWithLifetimes: Hashable, Codable {
    public var data: String
    public var other: String

    public init(
        data: String,
        other: String) {
        self.data = data
        self.other = other
    }
}

extension TypeWithLifetimes {
    enum CodingKeys: String, CodingKey, Codable {
        case data = "data"
        case other = "other"
    }
}


