go-away/tests/snapshots/swift_output__struct_output.snap
---
source: go-away/tests/swift_output.rs
expression: "go_away::registry_to_output::<go_away::SwiftType>(&registry)"
---
public struct MyData: Hashable {
    public var fieldOne: String
    public var nested: Nested

    public init(
        fieldOne: String,
        nested: Nested,
    ) {
        self.fieldOne = fieldOne
        self.nested = nested
    }
}

public struct Nested: Hashable {
    public var aString: String
    public var anInt: Int64
    public var fulfilmentType: FulfilmentType

    public init(
        aString: String,
        anInt: Int64,
        fulfilmentType: FulfilmentType,
    ) {
        self.aString = aString
        self.anInt = anInt
        self.fulfilmentType = fulfilmentType
    }
}

public enum FulfilmentType {
    case delivery
    case collection
}


